--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: "2"
 services:
     neo4j:
       image: neo4j:3.2.1
-      mem_limit: 4096m
       restart: on-failure
       ports:
        - "17474:7474"
@@ -14,46 +13,18 @@ services:
       ports:
         - "5432:5432"
       environment:
-        POSTGRES_USER: postgres
+        POSTGRES_USER: postgres1
         POSTGRES_PASSWORD: postgres
+        POSTGRES_DB: pursume
     web:
-      image: node-app
+      build: .
       ports:
         - "3333:3333"
       depends_on:
         - pgdb
       environment:
         SEQ_DB: pursume
-        SEQ_USER: postgres
+        SEQ_USER: postgres1
         SEQ_PW: postgres
         PORT: 5432
-        DATABASE_URL: postgres://postgres:postgres@pgdb:5432/pursume
-      volumes:
-        - .:/opt/app
-
-# services:
-#   neo4j:
-#     image: neo4j:3.2.1
-#     ports:
-#       - "7474:17474"
-#     environment:
-#       NEO4J_AUTH: none
-  # pgdb:
-  #   image: postgres
-  #   ports:
-  #     - "5432:5432"
-  #   environment:
-  #     POSTGRES_USER: postgres
-  #     POSTGRES_PASSWORD: postgres
-  # web:
-  #   image: node-app
-  #   ports:
-  #     - "3333:3333"
-  #   depends_on:
-  #     - pgdb
-  #   environment:
-  #     SEQ_DB: pursume
-  #     SEQ_USER: postgres
-  #     SEQ_PW: postgres
-  #     PORT: 5432
-  #     DATABASE_URL: postgres://postgres:postgres@pgdb:5432/pursume
+        DATABASE_URL: postgres://postgres1:postgres@pg:5432?sslmode=disable
